--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-VITE_URL_PLAYERS = http://localhost:3001/players
+VITE_URL_PLAYERS = postgres://postgres:Dbcd-45EeDdD6DACEfCEF2*gcdbc2F4E@viaduct.proxy.rlwy.net:20322/railway/players
